--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   google_fonts: ^6.2.1
   audioplayers: ^6.1.1
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
@@ -64,7 +65,13 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/billie-eilish-hit-me-hard-and-soft-album-2024-cover.jpg
+    - assets/images/R.jpg
+    - assets/images/maxresdefault.jpg
     - assets/audio/
+    - assets/audio/Billie Eilish - WILDFLOWER (Official Lyric Video).mp3
+    - assets/audio/Billie Eilish, Khalid - lovely.mp3
+    - assets/audio/Isabel LaRosa - eyes don’t lie (slowed + reverb).mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
